# pong

./: .gitmodules  CMakeLists.txt  README.md
server/: CMakeLists.txt
src/: ball.cpp  ball.h  gamemanager.cpp  gamemanager.h  main.cpp  player.h  pongplayer.h
